# ece-569-project

./: .gitignore  MP4toPNG.py  README.md  key  key.pub
final_project/: frameTiming.txt
final_project/Frames/: CMakeLists.txt
final_project/Frames/src/: frames.cpp
final_project/KCF-CUDA/: #CMakeLists.txt#  CMakeLists.txt
final_project/KCF-CUDA/src/: PCAFeatureMaps.cu  PCAFeatureMaps.cuh  fhog.cpp  gaussianCorrelation.cu  gaussianCorrelation.cuh  gaussianCorrelation.cu~  kcftracker.cpp  kcftracker.hpp  n4complexity.cu  n4complexity.cuh  normalizeAndTruncate.cu  normalizeAndTruncate.cuh  recttools.hpp  runtracker.cpp
final_project/build-Frames/: CMakeCache.txt  Frames  Makefile  cmake_install.cmake
final_project/buildKCF/: CMakeCache.txt  KCF  Makefile  cmake_install.cmake
final_project/buildKCF/config/: image.txt  region.txt
final_project/buildKCF/config/outputs/: output.txt  timing.txt
final_project/buildOpenCV/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  OpenCVConfig.cmake  OpenCVModules.cmake  cmake_install.cmake  cmake_uninstall.cmake  cvconfig.h  install_manifest.txt
final_project/buildOpenCV/apps/: Makefile  cmake_install.cmake
final_project/buildOpenCV/apps/annotation/: Makefile  cmake_install.cmake
final_project/buildOpenCV/apps/createsamples/: Makefile  cmake_install.cmake
final_project/buildOpenCV/apps/traincascade/: Makefile  cmake_install.cmake
final_project/buildOpenCV/data/: Makefile  cmake_install.cmake
final_project/buildOpenCV/doc/: Makefile  cmake_install.cmake
final_project/buildOpenCV/include/: Makefile  cmake_install.cmake
final_project/buildOpenCV/lib/: libopencv_calib3d.so.3.0.0  libopencv_core.so.3.0.0  libopencv_features2d.so.3.0.0  libopencv_flann.so.3.0.0  libopencv_highgui.so.3.0.0  libopencv_imgcodecs.so.3.0.0  libopencv_imgproc.so.3.0.0  libopencv_ml.so.3.0.0  libopencv_objdetect.so.3.0.0  libopencv_photo.so.3.0.0  libopencv_shape.so.3.0.0  libopencv_stitching.so.3.0.0  libopencv_superres.so.3.0.0  libopencv_video.so.3.0.0  libopencv_videoio.so.3.0.0  libopencv_videostab.so.3.0.0
final_project/buildOpenCV/modules/: Makefile  cmake_install.cmake
final_project/buildOpenCV/modules/calib3d/: Makefile  cmake_install.cmake  opencv_calib3d_pch_dephelp.cxx
final_project/buildOpenCV/modules/core/: Makefile  cmake_install.cmake  opencv_core_pch_dephelp.cxx  version_string.inc
final_project/buildOpenCV/modules/features2d/: Makefile  cmake_install.cmake  opencv_features2d_pch_dephelp.cxx
final_project/buildOpenCV/modules/flann/: Makefile  cmake_install.cmake  opencv_flann_pch_dephelp.cxx
final_project/buildOpenCV/modules/hal/: Makefile  cmake_install.cmake  opencv_hal_pch_dephelp.cxx
final_project/buildOpenCV/modules/highgui/: Makefile  cmake_install.cmake  opencv_highgui_pch_dephelp.cxx
final_project/buildOpenCV/modules/imgcodecs/: Makefile  cmake_install.cmake  opencv_imgcodecs_pch_dephelp.cxx
final_project/buildOpenCV/modules/imgproc/: Makefile  cmake_install.cmake  opencv_imgproc_pch_dephelp.cxx
final_project/buildOpenCV/modules/ml/: Makefile  cmake_install.cmake  opencv_ml_pch_dephelp.cxx
final_project/buildOpenCV/modules/objdetect/: Makefile  cmake_install.cmake  opencv_objdetect_pch_dephelp.cxx
final_project/buildOpenCV/modules/photo/: Makefile  cmake_install.cmake  opencv_photo_pch_dephelp.cxx
final_project/buildOpenCV/modules/python2/: Makefile  cmake_install.cmake  headers.txt
final_project/buildOpenCV/modules/shape/: Makefile  cmake_install.cmake  opencv_shape_pch_dephelp.cxx
final_project/buildOpenCV/modules/stitching/: Makefile  cmake_install.cmake  opencv_stitching_pch_dephelp.cxx
final_project/buildOpenCV/modules/superres/: Makefile  cmake_install.cmake  opencv_superres_pch_dephelp.cxx
final_project/buildOpenCV/modules/ts/: Makefile  cmake_install.cmake  (+1 more)
final_project/buildOpenCV/unix-install/: opencv.pc
final_project/config/: image.txt
final_project/config/outputs/: output.txt  timing.txt
final_project/installOpenCV/lib/: libopencv_calib3d.so.3.0.0  libopencv_core.so.3.0.0  libopencv_features2d.so.3.0.0  libopencv_flann.so.3.0.0  libopencv_highgui.so.3.0.0  libopencv_imgcodecs.so.3.0.0  libopencv_imgproc.so.3.0.0  libopencv_ml.so.3.0.0  libopencv_objdetect.so.3.0.0  libopencv_photo.so.3.0.0  libopencv_shape.so.3.0.0  libopencv_stitching.so.3.0.0  libopencv_superres.so.3.0.0  libopencv_video.so.3.0.0  libopencv_videoio.so.3.0.0  libopencv_videostab.so.3.0.0
(+82 files in other folders)
